<resources>
    <string name="app_name"></string>
    <string name="shr_hint_email">Email</string>
    <string name="shr_hint_photoUrl">Avatar Word (type anything)</string>
    <string name="shr_hint_fullName">Full Name</string>
    <string name="shr_hint_phone">Phone</string>
    <string name="shr_hint_password">Password</string>
    <string name="add_notes">add</string>
    <string name="action_search">search</string>
    <string name="shr_hint_storyTitle">Story Title</string>
    <string name="shr_hint_storyDescription">Story Description</string>
    <string name="add_story">Add Story</string>
    <string name="cancel">Cancel</string>
    <string name="shr_hint_locationStart">Location Start</string>
    <string name="shr_hint_locationEnd">Location End</string>
    <string name="shr_hint_eventTitle">Event Title</string>
    <string name="shr_hint_location">Location</string>
    <string name="shr_hint_eventDescription">Event Description</string>
    <string name="add_picture">Upload Photo</string>
    <string name="add_event">Add Event</string>
    <string name="map_key" translatable="false">AIzaSyCENMd7pHPxl4TgjHIzIkf1pJPJyEOezdo</string>
</resources>